--- a/flipr/Base.lproj/Main.storyboard
+++ b/flipr/Base.lproj/Main.storyboard
@@ -8,17 +8,17 @@
         <scene sceneID="7Ps-Yn-8QC">
             <objects>
                 <collectionViewController autoresizesArchivedViewToFullSize="NO" id="ht5-0b-bSA" customClass="SelectPhotosViewController" sceneMemberID="viewController">
-                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="ITX-Ty-yRf">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="3uW-TO-sV1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LIn-GY-V60">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Vp-Og-Xqb">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QhY-8W-tbE">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Gp2-Vr-MCX">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -29,8 +29,8 @@
                             </collectionViewCell>
                         </cells>
                         <connections>
-                            <outlet property="dataSource" destination="ht5-0b-bSA" id="7b8-0t-epm"/>
-                            <outlet property="delegate" destination="ht5-0b-bSA" id="M89-bD-oD3"/>
+                            <outlet property="dataSource" destination="ht5-0b-bSA" id="wuN-Uq-6lW"/>
+                            <outlet property="delegate" destination="ht5-0b-bSA" id="mzr-uN-WgS"/>
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="k6d-NS-xVg">
@@ -54,6 +54,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="photoSourceSegmentControl" destination="pcg-s3-C7l" id="Jpk-2C-Mdg"/>
+                        <outlet property="photosCollectionView" destination="3uW-TO-sV1" id="6fB-F2-7Ac"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iaq-tF-Cxb" userLabel="First Responder" sceneMemberID="firstResponder"/>
